scripts/helms/traefik/operator-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chaos-operator-api
  namespace: chaos-system
spec:
  ingressClassName: traefik
  rules:
    - host: operator.localhost
      http:
        paths:
          - path: /api/v1/podchaos
            pathType: Prefix
            backend:
              service:
                name: chaos-operator-api
                port:
                  number: 8082
