scripts/helms/traefik/operator-metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chaos-operator-metrics
  namespace: chaos-system
spec:
  ingressClassName: traefik
  rules:
    - host: operator.localhost
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: chaos-operator-metrics
                port:
                  number: 8080
